# kaipred

./: .gitignore  Makefile  Pipfile  README.md  setup.cfg
kaipred/: __info__.py  __init__.py
kaipred/admin/: user.py
kaipred/dataset/: demo_data.py  user.py
kaipred/interface/: kaipred.py
kaipred/util/: crypto.py
test/: test_init.py  test_interface.py  test_user.py
test_dir/: admin.json
test_dir/demo/: setting.json
tool/: tool.py
