[metadata]
name = attr: kaipred.__info__.__name__
version = attr: kaipred.__info__.__version__
url = https://github.com/lisphilar/kaipred
author = attr: kaipred.__info__.__author__
author_email = attr: kaipred.__info__.__author_email__
license = Apache License 2.0
license_file = LICENSE
description = attr: kaipred.__info__.__desc__
long_description = file: README.rst
keywords = kakeibo,account,command-line
classifiers =
    Development Status :: 1 - Planning
    # Development Status :: 2 - Pre-Alpha
    # Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8


[options]
packages = find:
install_requires =
    matplotlib
    pandas
    seaborn
    dask[complete]
    tabulate
    numpy
    cryptography
